# CREWAI_LOGISTICS

./: .gitignore  README.md  app.py  check_gemini.py  pyproject.toml
src/shipment/: crew.py  main.py
src/shipment/config/: agents.yaml  tasks.yaml
src/shipment/tools/: custom_tools.py
